Abstraction for dispatching accessibility actions in the renderer

Currently, in the renderer, accessibility actions go to a WebAXObject,
but plugins such as PDF do not generate WebAXObjects. This CL
introduces an AXActionTarget abstraction that allows allow actions to
be dispatched without knowing the underlying node type.

Bug: 769940
Change-Id: I056d3d2ef325258c2dff5a328fe9958f25cbd77c
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1693772
Commit-Queue: Kevin Babbitt <kbabbitt@microsoft.com>
Reviewed-by: Nektarios Paisios <nektar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#679795}

Former-commit-id: a7d48185f52b2ca462b61116a0285b1588d0171e