content/renderer/accessibility/ax_action_target_factory.h
@@ -1,0 +1,34 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+// Copyright 2019 The Chromium Authors. All rights reserved.
+// Use of this source code is governed by a BSD-style license that can be
+// found in the LICENSE file.
+
+#ifndef CONTENT_RENDERER_ACCESSIBILITY_AX_ACTION_TARGET_FACTORY_H_
+#define CONTENT_RENDERER_ACCESSIBILITY_AX_ACTION_TARGET_FACTORY_H_
+
+#include "content/common/content_export.h"
+
+#include <memory>
+
+namespace blink {
+class WebDocument;
+}
+
+namespace ui {
+class AXActionTarget;
+}
+
+namespace content {
+
+class CONTENT_EXPORT AXActionTargetFactory {
+ public:
+  // Given a node id, obtain a node from the appropriate tree source and wrap
+  // it in an abstraction for dispatching accessibility actions.
+  static std::unique_ptr<ui::AXActionTarget> CreateFromNodeId(
+      const blink::WebDocument& document,
+      int node_id);
+};
+
+}  // namespace content
+
+#endif  // CONTENT_RENDERER_ACCESSIBILITY_AX_ACTION_TARGET_FACTORY_H_
